Change header from 'TO-DO List' to 'Work-in-progress'

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>TO-DO List</h1>
+        <h1>Work-in-progress</h1>
 
         <!-- buton pentru adaugare task -->
         <div class="buton-task">
